--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,22 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@arisbh/marqueeck": "^0.5.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
+		"autoprefixer": "^10.4.17",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"postcss": "^8.4.35",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-routing": "^2.12.0",
+		"tailwindcss": "^3.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
